--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,8 @@
     "\n",
     "def question_7(input):\n",
     "    q7_sol_1, q7_sol_2, q7_sol_3 = np.split(input, 3)\n",
-    "    return q7_sol_1, q7_sol_2, q7_sol_3\n",
+    "    result = [q7_sol_1, q7_sol_2, q7_sol_3]\n",
+    "    return result\n",
     "\n",
     "\n",
     "q7_sol_1, q7_sol_2, q7_sol_3 = question_7(input)\n",
@@ -379,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -1006,20 +1007,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "all the input arrays must have same number of dimensions, but the array at index 0 has 2 dimension(s) and the array at index 2 has 0 dimension(s)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[80], line 39\u001b[0m\n\u001b[0;32m     35\u001b[0m     result \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mconcatenate((interpolate, fo_diff, missing_flag), axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     37\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n\u001b[1;32m---> 39\u001b[0m q20_sol \u001b[38;5;241m=\u001b[39m \u001b[43mquestion_20\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     40\u001b[0m q20\u001b[38;5;241m.\u001b[39mcheck()\n",
-      "Cell \u001b[1;32mIn[80], line 35\u001b[0m, in \u001b[0;36mquestion_20\u001b[1;34m(input)\u001b[0m\n\u001b[0;32m     31\u001b[0m missing_flag \u001b[38;5;241m=\u001b[39m missing_flag\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mint\u001b[39m)\n\u001b[0;32m     34\u001b[0m \u001b[38;5;66;03m# Step 6: create final matrix by concatenate Normalize/interpolate, fo_diff, missing_flag by axis 1\u001b[39;00m\n\u001b[1;32m---> 35\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcatenate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43minterpolate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfo_diff\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmissing_flag\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-      "\u001b[1;31mValueError\u001b[0m: all the input arrays must have same number of dimensions, but the array at index 0 has 2 dimension(s) and the array at index 2 has 0 dimension(s)"
-     ]
+     "data": {
+      "application/javascript": "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 1, \"valueTowardsCompletion\": 0.05, \"interactionType\": 1, \"questionType\": 1, \"questionId\": \"20_Exercise20\", \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "<span style=\"color:#33cc33\">Correct</span>"
+      ],
+      "text/plain": [
+       "Correct"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1035,24 +1046,24 @@
     "\n",
     "\n",
     "def question_20(input):\n",
-    "    # Step 1: normalize array\n",
+    "    # Step 1: normalize array (used to mask anomalies only)\n",
     "    mean = np.mean(input, axis = 0)\n",
     "    standard_deviation = np.std(input, axis = 0)\n",
     "    standard_deviation = np.where(standard_deviation == 0, 1, standard_deviation)\n",
     "    Normalize = (input - mean)/standard_deviation\n",
     "\n",
-    "    # Step_2: replace anomalous value by nan\n",
+    "    # Step_2: replace anomalous value with nan\n",
     "    ano_remove = np.where(np.abs(Normalize) > 2.5, np.nan, Normalize)\n",
     "\n",
-    "    # Step 3: replace nan by average\n",
-    "    interpolate = np.where(np.isnan(ano_remove), np.nanmean(ano_remove), ano_remove)\n",
+    "    # Step 3: replace nan (masked by normalize) in original input by average\n",
+    "    interpolate = np.where(np.isnan(ano_remove), np.nanmean(input, axis = 0), input)\n",
     "\n",
     "    # Step 4: calculate first order difference\n",
     "    fo_diff = np.diff(interpolate, axis = 0)\n",
-    "    fo_diff = np.concatenate((np.zeros((1, 3)), fo_diff), axis = 0)\n",
+    "    fo_diff = np.vstack((fo_diff, np.zeros((1, input.shape[1]))))\n",
     "\n",
     "    # Step 5: flag NaN as 1\n",
-    "    missing_flag = np.isnan(interpolate)\n",
+    "    missing_flag = np.isnan(ano_remove)\n",
     "    missing_flag = missing_flag.astype(int)\n",
     "\n",
     "\n",
